--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <div id="root">
         <h1>Git: Branches</h1>
         <h2>Lesson 3</h2>
+        <h3>Plan</h3>
+        <ol>
+            <il>Branches</il>
+            <il>Code review</il>
+            <il>Conflictsgit</il>
+        </ol>
     </div>
 </body>
 </html>
